plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group = 'com.hhy'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

targetCompatibility = JavaVersion.VERSION_1_8
sourceCompatibility = JavaVersion.VERSION_1_8

dependencies {
    implementation project(":common")
}

test {

}

//jar {
//    manifest {
//        attributes(
//                "Agent-Class": "com.hhy.agent.AgentMain",
//                "Can-Redefine-Classes": "true",
//                "Can-Retransform-Classes": "true",
//                "Manifest-Version": "1.0"
//        )
//    }
//    into('lib') {
//        from configurations.runtimeClasspath
//    }
//}

shadowJar {
    archiveBaseName = 'macaque-agent'
    archiveVersion = '1.0'
    archiveClassifier = null
    manifest {
        attributes(
                "Agent-Class": "com.hhy.agent.AgentMain",
                "Can-Redefine-Classes": "true",
                "Can-Retransform-Classes": "true",
                "Manifest-Version": "1.0"
        )
    }
}